# python-mpms

./: LICENSE  README.md  introduction.ipynb  pyproject.toml
data/A269/: A269_GdN_FC_250_Oe_150528.rso.ndat  A269_GdN_MH_10K_150528.rso.ndat  A269_GdN_MH_10K_150528.rso.raw  A269_GdN_MH_25K_150528.rso.ndat  A269_GdN_MH_25K_150528.rso.raw  A269_GdN_MH_35K_150528.rso.ndat  A269_GdN_MH_35K_150528.rso.raw  A269_GdN_MH_50K_150528.rso.ndat  A269_GdN_MH_50K_150528.rso.raw  A269_GdN_MH_55K_150528.rso.ndat  A269_GdN_MH_55K_150528.rso.raw  A269_GdN_MH_5K_150528.rso.ndat  A269_GdN_MH_5K_150528.rso.raw  A269_GdN_MH_60K_150528.rso.ndat  A269_GdN_MH_60K_150528.rso.raw  A269_GdN_ZFC_250_Oe_150528.rso.ndat  A269_cool_zero_field_150528.rso.ndat  A269_cool_zero_field_150528.rso.raw
data/A344/: A344_GdN_FC_050_Oe_160908.rso.ndat  A344_GdN_FC_050_Oe_160908.rso.raw  A344_GdN_MH_005K_160905.rso.ndat  A344_GdN_MH_010K_160908.rso.ndat  A344_GdN_MH_020K_160908.rso.ndat  A344_GdN_MH_030K_160908.rso.ndat  A344_GdN_MH_040K_160905.rso.ndat  A344_GdN_MH_050K_160905.rso.ndat  A344_GdN_MH_055K_160905.rso.ndat  A344_GdN_MH_060K_160905.rso.ndat  A344_GdN_MH_065K_160905.rso.ndat  A344_GdN_MH_070K_160905.rso.ndat  A344_GdN_MH_075K_160905.rso.ndat  A344_GdN_ZFC_050_Oe_160908.rso.ndat  A344_GdN_ZFC_050_Oe_160908.rso.raw  A344_cool_zero_field_050_160908.rso.ndat  A344_cool_zero_field_050_160908.rso.raw
src/magnetometry/: __init__.py  __main__.py  fitting.py  gui.py  gui_tk.py  interactive.py  load.py  mpms.py  reference.py
