[project]
name = "magnetometry"
version = "0.0.1"
description = "Example QD MPMS data analysis"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "ipython",
    "matplotlib",
    "numpy<2",
    "scipy<1.14",
    "lmfit",
]

[project.optional-dependencies]
notebook = [
    "notebook",
    "ipympl",
    "jupyter-black",
]

[project.scripts]

[build-system]
requires = [
    "setuptools",
    "wheel",
]
